# rn-codegen-repro

./: CONTRIBUTING.md  README.md  RNCodegenExampleSpecJSI-generated.cpp  RNCodegenExampleSpecJSI.h  package.json  react-native-codegen-example.podspec  react-native.config.js  tsconfig.json
.github/workflows/: build-android.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/codegenexample/: CodegenExampleModule.kt  CodegenExamplePackage.kt
cpp/: NativeCodegenExampleTurboModule.cpp  NativeCodegenExampleTurboModule.h  react-native-codegen-example.cpp  react-native-codegen-example.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/codegenexample/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/CodegenExampleExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/CodegenExampleExample.xcodeproj/: project.pbxproj
example/ios/CodegenExampleExample.xcodeproj/xcshareddata/xcschemes/: CodegenExampleExample.xcscheme
example/ios/CodegenExampleExample.xcworkspace/: contents.xcworkspacedata
example/ios/CodegenExampleExampleTests/: CodegenExampleExampleTests.m
example/src/: App.tsx
ios/: CodegenExample.h  CodegenExample.mm  onLoad.mm
src/: NativeCodegenExample.ts  index.tsx
